<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".ui.detail.DetailFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_user"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/share"
            android:src="@drawable/ic_share" />

        <ImageView
            android:id="@+id/iv_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/favorite"
            android:src="@drawable/ic_favorite" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/background"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:contentDescription="@string/background"
                    android:scaleType="centerCrop" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/avatar_user"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    tools:src="@android:color/darker_gray" />

            </FrameLayout>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_user"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1"
                android:text="@string/bio"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/tv_name"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/tv_bio"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_company_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_user"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/tv_company"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/tv_company_user"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_location_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_user"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/tv_location"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_repository"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repository"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/tv_location_user"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_repository_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repository_user"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/tv_repository"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_followers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/tv_repository_user"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_followers_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/followers_user"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/tv_followers"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_following"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/following"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/tv_followers_user"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_following_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/following_user"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_following"
                tools:visibility="visible" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                style="@style/TabStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_following_user" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/tabs" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>